@@ -84,7 +84,7 @@ class tx_rsaauth_loginformhook {
 				$storage->put($keyPair->getPrivateKey());
 
 				// Add RSA hidden fields
-				$form .= '<input type="hidden" id="rsa_n" name="n" value="' . htmlspecialchars($keyPair->getPublicKey()) . '" />';
+				$form .= '<input type="hidden" id="rsa_n" name="n" value="' . htmlspecialchars($keyPair->getPublicKeyModulus()) . '" />';
 				$form .= '<input type="hidden" id="rsa_e" name="e" value="' . sprintf('%x', $keyPair->getExponent()) . '" />';
 			}
 		}
